--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,12 @@
     },
     "content_scripts": [
       {
-        "matches": ["*://www.codingninjas.com/*"],
+        "matches": ["*://www.naukri.com/*"],
         "js": ["content.js"]
       }
     ],
     "oauth2": {
-      "client_id": "YOUR_CLIENT_ID",
+      "client_id": "Ov23lis7FohHYsz5T5xp",
       "scopes": [
         "repo"
       ]
